# ckan-pycsw

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  ckan2pycsw-cm0-configmap.yaml  ckan2pycsw-cm1-configmap.yaml  ckan2pycsw-pod.yaml  ckan2pycsw-pvc-log.yaml  ckan2pycsw-pvc.yaml  ckan2pycsw-service.yaml  docker-compose-resolved.yaml  docker-compose.dev.yml  docker-compose.ghcr.dev.yml  docker-compose.ghcr.yml  docker-compose.test-docker.yml  docker-compose.yml  docker-compose_dev.yml  pycsw.conf.template  pyproject.toml
.github/draft/: docker_scan-lint.yaml
.github/workflows/: docker-dev.yaml  docker-main.yaml  docker-manual.yaml  docker-pr.yaml  docker-push.yaml  docker.yaml
ckan-pycsw/: Dockerfile  Dockerfile.dev  Dockerfile.ghcr  Dockerfile.ghcr.dev  README.md
ckan-pycsw/conf/: pycsw.conf.template
ckan-pycsw/docker-entrypoint.d/: entrypoint.sh  entrypoint_dev.sh
ckan2pycsw/: ckan2pycsw.py
ckan2pycsw/config/: log.py
ckan2pycsw/mappings/: ckan-pycsw_assigments.yaml  mcf_core.yaml  status.yaml
ckan2pycsw/mappings/ckan_base/: status.yaml
ckan2pycsw/mappings/ckan_geodcatap/: ckan_schema.yaml  dcat_ap.yaml  dcat_type.yaml  language.yaml  rights.yaml  spatial_scope.yaml  theme-dcat_ap.yaml  topic-theme.yaml
ckan2pycsw/mappings/inspire/: distribution_type.yaml  format.yaml  rights.yaml  scope_code.yaml  (+5 more)
ckan2pycsw/model/: dataset.py  template.py
doc/scripts/: 00_ennvars.sh
docker/: README.md
log/: README.md
metadata/: README.md
pycsw/: README.md  entrypoint.sh  entrypoint_dev.sh
pycsw/conf/: pycsw.conf.template
(+12 files in other folders)
